# skimnar

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  gen_data.py  pyproject.toml
skimnar/: __init__.py  base_ops.py  skimnar.py  utils.py
skimnar/frames/: __init__.py  boolean_ops.py  categorical_ops.py  datetime_ops.py  duration_ops.py  numeric_ops.py  string_ops.py
tests/: nw_utils.py
tests/data/: synthetic_data.parquet  test_data.parquet
tests/numeric_frame/: test_get_quantile.py  test_interquantile_range.py  test_maybe_outliers.py
tests/string_frame/: test_longest_string.py  test_replace_many.py  test_shortest_string.py  test_total_chars.py  test_total_words.py
